--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "framer-motion": "^12.31.0",
+    "react": "18.2.0",
     "react-dom": "^19.2.4",
-    "react": "^19.2.4",
-    "lucide-react": "^0.563.0"
+    "framer-motion": "10.16.4",
+    "lucide-react": "0.263.1",
+    "firebase": "10.8.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
