--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-dom": "^19.2.4",
     "framer-motion": "10.16.4",
     "lucide-react": "0.263.1",
-    "firebase": "10.8.0"
+    "firebase": "^12.8.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
