--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@google/generative-ai": "^0.21.0",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "pdf-lib": "^1.17.1",
     "pdf-parse": "^1.1.1",
     "tsx": "^4.7.0",
     "typescript": "~5.8.2",
