--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ dist-ssr
 # PDF processing cache
 .pdf-chunks/
 .ocr-cache.txt
+.ocr-cache-chunks/
+.structuring-checkpoint.json
 
 # Editor directories and files
 .vscode/*
